<resources>
    <string name="app_name">Blood Donation App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="home">Home</string>
    <string name="donate">Donate</string>
    <string name="settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_donate">Donate</string>
    <string name="title_settings">Settings</string>
    <string name="loginButtonName">LOGIN</string>
    <string name="signUpButtonName">SIGN UP</string>
    <string name="idEditTextHint">EMAIL ID / PHONE NUMBER</string>
    <string name="passwordEditTextHint">PASSWORD</string>
    <string name="loginErrorMessage">Invalid Credentials</string>
    <string name="userNameEditTextHint">YOUR NAME</string>
    <string name="emailAddressEditTextHint">EMAIL</string>
    <string name="phoneNumberEditTextHint">PHONE NUMBER</string>
    <string name="addressEditTextHint">ADDRESS</string>
    <string name="dobEditTextHint">DATE OF BIRTH</string>
    <string name="emptyEmailorPhoneNumber">Enter ID</string>
    <string name="emptyPasswordError">Enter Password</string>
    <string name="emptyYourNameError">Enter your name</string>
    <string name="emptyEmailAddressError">Enter your Email Address</string>
    <string name="emptyPhoneNumberError">Enter your Phone Number</string>
    <string name="emptyConfirmPasswordError">Verify your Password in Confirm Password</string>
    <string name="passwordNotMatchError">Password did not match</string>
    <string name="confirmPasswordEditTextHint">CONFIRM PASSWORD</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="userAlreadyExistError">An account with this phone number already exist</string>
    <string name="userSuccessfullyAdded">Account successfully created</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="noAccountTextView">Don\'t have an account? click here</string>
    <string name="register">REGISTER</string>
    <string name="phone_number">PHONE NUMBER</string>
    <string name="nric">NRIC</string>
    <string name="full_name">FULL NAME</string>
    <string name="have_an_account_sign_in">Have an account? sign in</string>
    <string name="registerTextView">REGISTER</string>
    <string name="registerButtonName">Register</string>
    <string name="fingerprint_login">Fingerprint Login</string>
    <string name="_12_female_donors_only"><u>12. Female Donors Only:</u></string>
    <string name="_15_you_should_never_give_blood_if">15. You should <b>NEVER GIVE BLOOD IF</b>:</string>
    <string name="fifteenBulletPoint">
        <li> you and your partner are HIV positive\n</li>
        <li> you are man who has had sex with another man\n</li>
        <li> you have multiple sex partners\n</li>
        <li> you have ever worked as a prostitute\n</li>
        <li> you have ever injected yourslef, even once, with drugs (including body building drugs)\n</li>
        <li> you have had sex with prostitute</li>
    </string>
    <string name="please_fill_this_section_by_choose_the_correct_answer">Please fill this section by choose the correct answer</string>
</resources>