<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context="LoginActivity">

    <TextView
        android:id="@+id/LoginTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:text="@string/loginButtonName"
        android:textColor="#E91E63"
        android:textColorHighlight="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="32sp"
        android:textStyle="bold" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#EC5D5D"
            android:theme="@style/EditTextHint"
            android:inputType="textEmailAddress"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/LoginTextView"
            android:hint="@string/emailAddressEditTextHint"
            android:textColor="#E91E63"
            android:textColorHighlight="#FFFFFF"
            android:textColorHint="#E91E63"
            android:textColorLink="#FFFFFF" />



        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#E91E63"
            android:theme="@style/EditTextHint"
            android:layout_below="@+id/emailAddress"
            android:hint="@string/passwordEditTextHint"
            android:inputType="textPassword"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="20dp"
            android:textColor="#E91E63"
            android:textColorHighlight="#FFFFFF"
            android:textColorHint="#E91E63"
            android:textColorLink="#FFFFFF" />

    <TextView
        android:id="@+id/invalidText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textColor="#E91E63"
        android:visibility="gone"
        android:textSize="20sp"
        android:text="@string/loginErrorMessage"/>

    <Button
        android:id="@+id/loginButton"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/password"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/radius_border_button"
        android:onClick="loginValidation"
        android:text="@string/loginButtonName"
        android:textColor="@drawable/radius_border_button_text"
        android:textColorHighlight="#FFFFFF"
        android:textColorLink="#FFFFFF" />

</RelativeLayout>
